tests/baselines/reference/selfReferencesInFunctionParameters.errors.txt
==== tests/cases/compiler/selfReferencesInFunctionParameters.ts (4 errors) ====
    function foo(x: number = x) {
                             ~
!!! error TS2231: Parameter 'x' cannot be referenced in its initializer.
    }
    
    function bar(x0 = "", x: number = x) {
                                      ~
!!! error TS2231: Parameter 'x' cannot be referenced in its initializer.
    }
    
    class C {
        constructor(x = 1, y = y) {
                               ~
!!! error TS2231: Parameter 'y' cannot be referenced in its initializer.
        }
         
        bar(a = "", b: string = b.toString()) {
                                ~
!!! error TS2231: Parameter 'b' cannot be referenced in its initializer.
        }
    }